added javascript code to test it

--- a/Contacter.html
+++ b/Contacter.html
@@ -15,18 +15,17 @@
 		</header>
 		
 		<nav>
-			<p><a href="Index.html">Page principale</a></p>
-			<p><a href=#>des liens, encore des liens</a></p>
-			<p><a href=#>des liens, encore des liens</a></p>
-			<p><a href=#>des liens, encore des liens</a></p>
-			<p><a href=#>des liens, encore des liens</a></p>
-			<p><a href=#>des liens, encore des liens</a></p>
+			<p><a href="Index.html">Page principale</a></p>			
+			<p><a href="Article1.html">Pudi Pudi</a></p>
+			<p><a href="Article2.html">Deuxième Article</a></p>
+			<p><a href="Article3.html">Troisième Article</a></p>
+			<p><a href="Article4.html">Le Jeu de la vie</a></p>
 		
 		</nav>
 
 		<div class="boite4"> 
 			<h3>Woaw ! des gens qui nous contactent !</h3>
-			<!--<form method="post" action="traitement.php">
+			<form method="post" action="traitement.php">
 				<fieldset>
 					<legend>Informations à nous transmettre</legend>
 					<p class="sousligne">
@@ -46,7 +45,7 @@
 					</p>
 					<input type="submit" value="Envoyer" />
 			    </fieldset>
-			</form>-->
+			</form>
 		</div> 
 		
 	</body>
